--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -7,7 +7,7 @@ body,div,span,ul,li,a,i,p,button,input,::before,::after {
 body {
     font-size: 16px;
     font-family: "Microsoft YaHei";
-    background-color: rgb(253, 253, 253);
+    background-color: rgba(233, 227, 227, 0.2);
     color: rgb(48, 47, 47);
     width: 100%!important;
 }
@@ -30,6 +30,8 @@ input[type=search]::-webkit-search-cancel-button {
 .clearfix:after {
     content: '';
     display: block;
+    height: 0;
+    width: 0;
     clear: both;
 }
 
