--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -8,6 +8,7 @@ body {
     font-size: 16px;
     font-family: "Microsoft YaHei";
     background-color: rgba(233, 227, 227, 0.2);
+    --background-color: rgb(253, 253, 253);
     color: rgb(48, 47, 47);
     width: 100%!important;
 }
@@ -38,3 +39,6 @@ input[type=search]::-webkit-search-cancel-button {
 .clearfix{
     zoom:1;
 }
+.right {
+    float: right;
+  }
