--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -7,9 +7,11 @@ body,div,span,ul,li,a,i,p,button,input,::before,::after {
 body {
     font-size: 16px;
     font-family: "Microsoft YaHei";
-    background-color: rgba(233, 227, 227, 0.2);
+    background-color: rgb(247, 246, 246);
     --background-color: rgb(253, 253, 253);
+    --hover-color: rgb(241, 180, 24);
     color: rgb(48, 47, 47);
+    --color: rgb(48, 47, 47);
     width: 100%!important;
 }
 a {
@@ -42,3 +44,12 @@ input[type=search]::-webkit-search-cancel-button {
 .right {
     float: right;
   }
+.active {
+ color: var(--hover-color);
+}
+.subs {
+    color: rgb(130, 130, 130,.6)
+}
+.text-de {
+    text-decoration: line-through;
+}
