--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -69,5 +69,8 @@ input[type=search]::-webkit-search-cancel-button {
     text-decoration: line-through;
 }
 .line {
-    border-top: 1px solid rgb(214, 212, 212)
+    border-top: 1px solid rgb(214, 212, 212);
+}
+table,th,tr,td {
+    /* border: 1px solid rgb(214, 212, 212); */
 }
