--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -71,6 +71,11 @@ input[type=search]::-webkit-search-cancel-button {
 .line {
     border-top: 1px solid rgb(214, 212, 212);
 }
+table {
+    border-collapse: collapse;
+    table-layout: fixed;
+}
 table,th,tr,td {
-    /* border: 1px solid rgb(214, 212, 212); */
+    border: none;
+    overflow: hidden;
 }
